--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ minecraft {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
@@ -91,6 +95,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+    compile 'com.github.mezz:JustEnoughItems:1.13-SNAPSHOT'
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
