Update to 1.14.2 (part 6)

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,14 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+group = net.silentchaos512
+archivesBaseName = Tutorial-Mod
+mod_id = tutorial
+
+mc_version = 1.14.2
+#jei_version = 5.0.0.20
+
+forge_version = 26.0.25
+mcp_channel = snapshot
+mcp_mappings = 20190613
