--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ archivesBaseName = project.archivesBaseName
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    mappings channel: project.mcp_channel, version: "${project.mcp_mappings}-${project.mc_version}"
+    mappings channel: project.mcp_channel.toString(), version: project.mcp_mappings.toString()
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
@@ -66,7 +66,7 @@ repositories {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${project.mc_version}-${project.forge_version}"
+    minecraft "net.minecraftforge:forge:${project.forge_version}"
 
 //    compile 'com.github.mezz:JustEnoughItems:1.13-SNAPSHOT'
 }
