--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,9 @@ group = net.silentchaos512
 archivesBaseName = Tutorial-Mod
 mod_id = tutorial
 
-mc_version = 1.14.3
+mc_version = 1.14.4
 #jei_version = 5.0.0.20
 
-forge_version = 27.0.16
+forge_version = 1.14.4-28.0.45
 mcp_channel = snapshot
-mcp_mappings = 20190630
+mcp_mappings = 20190806-1.14.3
