--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 minecraft {
     mappings channel: project.mcp_channel.toString(), version: project.mcp_mappings.toString()
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
@@ -62,6 +62,11 @@ minecraft {
 }
 
 repositories {
+    mavenLocal()
+    maven {
+        // Silent Lib. If you want to try the sl_nbt command, uncomment silent-lib line in dependencies
+        url "https://dl.bintray.com/silentchaos512/silent-lib"
+    }
     maven { url 'https://jitpack.io' }
 }
 
@@ -69,6 +74,8 @@ dependencies {
     minecraft "net.minecraftforge:forge:${project.forge_version}"
 
 //    compile 'com.github.mezz:JustEnoughItems:1.13-SNAPSHOT'
+
+//    compile "net.silentchaos512:silent-lib-1.14.4:4.+"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -76,13 +83,13 @@ jar {
     appendix = project.mc_version
     manifest {
         attributes([
-            "Specification-Title": project.mod_id,
-            "Specification-Vendor": "SilentChaos512",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"SilentChaos512",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Specification-Title"     : project.mod_id,
+                "Specification-Vendor"    : "SilentChaos512",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "SilentChaos512",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
